--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,76 @@
-.hello {
-  color: red;
+@import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Poppins&family=Roboto&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
+header {
+  padding: 30px;
+}
+
+header h1 {
+  font-size: 2.4rem;
+}
+
+main {
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.recent-scores,
+.add-scores {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.scores-header {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+}
+
+.scores-header h2,
+.add-scores h2 {
+  font-size: 1.9rem;
+}
+
+button {
+  border: 2px solid #000;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.scores-container {
+  border: 2px solid #000;
+}
+
+.scores-container ul {
+  list-style: none;
+}
+
+.scores-container ul li {
+  padding: 3px 10px;
+}
+
+.scores-container ul li:nth-child(even) {
+  background-color: #ccc;
+}
+
+input {
+  padding: 5px 10px;
+  outline: 1px solid #000;
+}
+
+.btn-submit-score {
+  width: 70px;
+  margin-right: 0;
+  margin-left: auto;
 }
