--- a/src/style.css
+++ b/src/style.css
@@ -8,20 +8,27 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+  background-color: #ba94d1;
+  color: #150050;
 }
 
 header {
-  padding: 30px;
+  padding: 20px 30px;
 }
 
 header h1 {
-  font-size: 2.4rem;
+  font-size: 2.8rem;
 }
 
 main {
-  margin-top: 30px;
+  width: 60%;
+  margin: 30px auto;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  background-color: #fff;
+  border: 2px solid #150050;
+  border-radius: 5px;
+  padding: 30px;
 }
 
 .recent-scores,
@@ -32,10 +39,14 @@ form {
   gap: 20px;
 }
 
+.add-scores {
+  width: 240px;
+}
+
 .scores-header {
   display: flex;
   align-items: center;
-  gap: 50px;
+  gap: 130px;
 }
 
 .scores-header h2,
@@ -44,13 +55,17 @@ form {
 }
 
 button {
-  border: 2px solid #000;
+  border: 2px solid #150050;
+  border-radius: 5px;
   padding: 5px 10px;
   cursor: pointer;
+  color: #150050;
 }
 
 .scores-container {
-  border: 2px solid #000;
+  height: 285px;
+  overflow-y: scroll;
+  padding: 0 10px;
 }
 
 .scores-container ul {
@@ -58,16 +73,16 @@ button {
 }
 
 .scores-container ul li {
-  padding: 3px 10px;
-}
-
-.scores-container ul li:nth-child(even) {
+  padding: 5px 10px;
+  margin: 10px 0;
   background-color: #ccc;
+  border-radius: 5px;
 }
 
 input {
   padding: 5px 10px;
-  outline: 1px solid #000;
+  outline: 1px solid #150050;
+  height: 35px;
 }
 
 .btn-submit-score {
